<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountryActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rest API"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



    <RelativeLayout
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flag"
            android:layout_width="270dp"
            android:layout_height="170dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:background="#DFDBDB"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flag"
            android:layout_marginTop="35dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/capital"/>


        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capital"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/region"/>

        <TextView
            android:id="@+id/subregion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/region"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/subregion"/>

        <TextView
            android:id="@+id/population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subregion"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/population"/>

        <TextView
            android:id="@+id/borders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/population"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/borders"/>

        <TextView
            android:id="@+id/languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/borders"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/languages"/>
    </RelativeLayout>

</RelativeLayout>